--- a/apps/betterangels-admin/src/styles.css
+++ b/apps/betterangels-admin/src/styles.css
@@ -1,4 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* You can add global styles to this file, and also import other style files */
+
+:root {
+  --color-neutral-99: #f4f6fd;
+}
