--- a/apps/betterangels-admin/src/assets/global.css
+++ b/apps/betterangels-admin/src/assets/global.css
@@ -15,6 +15,7 @@
   --color-primary-60: #216af8;
   --color-primary-95: #dae7ff;
   --color-steel-blue: #375c76;
+  --color-neutral-30: #383b40;
   --color-neutral-40: #62676f;
   --color-neutral-70: #a8aeb8;
   --color-neutral-90: #d3d9e3;
