--- a/apps/betterangels-admin/src/assets/global.css
+++ b/apps/betterangels-admin/src/assets/global.css
@@ -22,6 +22,7 @@
   --color-neutral-99: #f4f6fd;
   --color-success-30: #007934;
   --color-success-90: #ddf8e8;
+  --animation-duration: 1300ms;
 }
 
 * {
