--- a/apps/betterangels-admin/src/assets/global.css
+++ b/apps/betterangels-admin/src/assets/global.css
@@ -5,6 +5,7 @@
 /* TODO: Adjust per project */
 :root {
   --font-primary: 'Poppins', 'sans-serif';
+  --color-alert-60: #e55141;
   --color-brand-orange: #ff902e;
   --color-brand-yellow: #fff82e;
   --color-brand-yellow-light: #fffed5;
@@ -15,6 +16,7 @@
   --color-primary-60: #216af8;
   --color-primary-95: #dae7ff;
   --color-steel-blue: #375c76;
+  --color-neutral-20: #383b40;
   --color-neutral-40: #62676f;
   --color-neutral-70: #a8aeb8;
   --color-neutral-90: #d3d9e3;
@@ -34,7 +36,7 @@
 
 html,
 body {
-  color: var(--color-primary-20);
+  color: var(--color-neutral-20);
   font-family: var(--font-primary);
 }
 
