Updated policy component and styling

--- a/apps/shelter-web/src/assets/styles/global.css
+++ b/apps/shelter-web/src/assets/styles/global.css
@@ -17,6 +17,7 @@
   --color-success-30: #007934;
   --color-success-90: #ddf8e8;
   --color-primary-dark: #1650C1;
+  --color-dark-blue: #1E3342;
 }
 
 * {
