add basic alert story

--- a/libs/react/components/.storybook/tailwind.css
+++ b/libs/react/components/.storybook/tailwind.css
@@ -4,6 +4,7 @@
 
 :root {
   --font-primary: 'Poppins', 'sans-serif';
+  --color-alert-60: #e55141;
   --color-brand-orange: #ff902e;
   --color-brand-yellow: #fff82e;
   --color-brand-yellow-light: #fffed5;
