--- a/apps/betterangels-backend/shelters/templates/admin/shelters/shelter/change_form.html
+++ b/apps/betterangels-backend/shelters/templates/admin/shelters/shelter/change_form.html
@@ -1,5 +1,6 @@
 {% extends "admin/change_form.html" %}
 {% load i18n admin_urls static admin_list %}
+{% load admin_modify %}
 {% block extrastyle %}
     {{ block.super }}
     <style>
@@ -7,15 +8,28 @@
     label.required::after { content: '\00a0*' !important; color: red; position: absolute; }
     .hero-fieldset .readonly { display: block; margin-bottom: .5rem; }
     .hero-fieldset img { max-height: 200px; }
+    .required-field-note { font-size: 14px; margin-top: 10px; }
+    .required-field-note .asterisk { color: red; }
     </style>
-{% endblock %}
+{% endblock extrastyle %}
 {% block content_title %}
     {{ block.super }}
-    <p style="font-size: 14px; margin-top: 10px;">
-        <span style="color: red;">*</span> indicates a required field
+    <p class="required-field-note">
+        <span class="asterisk">*</span> indicates a required field
     </p>
-{% endblock %}
-{% block field_sets %}{{ block.super }}{% endblock %}
+{% endblock content_title %}
+{% block object-tools-items %}
+    {{ block.super }}
+    {% if original %}
+        <li>
+            <a href="{% url 'admin:shelters_shelter_clone' original.pk %}"
+               class="button">{% trans "Clone Shelter" %}</a>
+        </li>
+    {% endif %}
+{% endblock object-tools-items %}
+{% block field_sets %}
+    {{ block.super }}
+{% endblock field_sets %}
 {% block inline_field_sets %}
     {# ContactInfo inline #}
     {% for inline_admin_formset in inline_admin_formsets %}
@@ -29,7 +43,10 @@
         <div class="form-row">
             <div class="readonly">
                 {% if original.hero_image and original.hero_image.file %}
-                    <img src="{{ original.hero_image.file.url }}" style="max-height: 200px;" />
+                    <img src="{{ original.hero_image.file.url }}"
+                         alt="Hero image for {{ original }}"
+                         width="auto"
+                         height="200" />
                 {% else %}
                     No hero image selected
                 {% endif %}
@@ -50,4 +67,4 @@
             {% include inline_admin_formset.opts.template with inline_admin_formset=inline_admin_formset only %}
         {% endif %}
     {% endfor %}
-{% endblock %}
+{% endblock inline_field_sets %}
